# ntex-swagger

./: Cargo.toml  README.md  rustfmt.toml
src/: error.rs  main.rs
src/models/: todo.rs
src/services/: mod.rs  openapi.rs  todo.rs
