[package]
name = "my-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "1.2.1", features = ["tokio"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
utoipa = "4.2.3"
utoipa-swagger-ui = "7.0.1"
